--- a/RayTrace.vcxproj.filters
+++ b/RayTrace.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="rayg_surface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rayg_camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
