--- a/RayTrace.vcxproj.filters
+++ b/RayTrace.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="rayg_surface.h">
       <Filter>Header Files\Surface Objects</Filter>
     </ClInclude>
+    <ClInclude Include="common_defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
