+ perlin noise & scenes seperated to file

--- a/RayTrace.vcxproj
+++ b/RayTrace.vcxproj
@@ -121,6 +121,8 @@
     <ClInclude Include="rayg_bvh.h" />
     <ClInclude Include="rayg_camera.h" />
     <ClInclude Include="rayg_material.h" />
+    <ClInclude Include="rayg_perlin.h" />
+    <ClInclude Include="rayg_scenes.h" />
     <ClInclude Include="rayg_sphere.h" />
     <ClInclude Include="Libraries\stb\stb_image.h" />
     <ClInclude Include="Libraries\stb\stb_image_write.h" />
@@ -137,6 +139,8 @@
     <ClCompile Include="rayg_bvh.cpp" />
     <ClCompile Include="rayg_camera.cpp" />
     <ClCompile Include="rayg_material.cpp" />
+    <ClCompile Include="rayg_perlin.cpp" />
+    <ClCompile Include="rayg_scenes.cpp" />
     <ClCompile Include="rayg_sphere.cpp" />
     <ClCompile Include="rayg_surface.cpp" />
     <ClCompile Include="rayg_texture.cpp" />
