+ Isotropic Volume & transformations started

--- a/RayTrace.vcxproj
+++ b/RayTrace.vcxproj
@@ -132,9 +132,11 @@
     <ClInclude Include="rayg_ray.h" />
     <ClInclude Include="rayg_surface.h" />
     <ClInclude Include="rayg_texture.h" />
+    <ClInclude Include="rayg_translate.h" />
     <ClInclude Include="rayg_triangle.h" />
     <ClInclude Include="rayg_vec3.h" />
     <ClInclude Include="rayg_rects.h" />
+    <ClInclude Include="rayg_constant_med.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common_defines.cpp" />
@@ -145,6 +147,7 @@
     <ClCompile Include="rayg_box.cpp" />
     <ClCompile Include="rayg_bvh.cpp" />
     <ClCompile Include="rayg_camera.cpp" />
+    <ClCompile Include="rayg_constant_med.cpp" />
     <ClCompile Include="rayg_material.cpp" />
     <ClCompile Include="rayg_perlin.cpp" />
     <ClCompile Include="rayg_renderer.cpp" />
@@ -153,6 +156,7 @@
     <ClCompile Include="rayg_surface.cpp" />
     <ClCompile Include="rayg_texture.cpp" />
     <ClCompile Include="rayg_rects.cpp" />
+    <ClCompile Include="rayg_translate.cpp" />
     <ClCompile Include="rayg_triangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
